--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
     username: sa
     password: ''
   h2:
@@ -14,3 +14,18 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active: "qa"
+
+build:
+  version: "3.0"
+
+accounts:
+  message: "Welcome to Cards Service"
+  contactDetails:
+    name: "Gracjan Lukaszewicz - Developer"
+    email: "gracjan.luk@gmail.com"
