Application info endpoints in Cards and Loans ms - Add application info endpoints in Cards and Loans ms

--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
 build:
   version: "3.0"
 
-accounts:
+loans:
   message: "Welcome to Loans Service"
   contactDetails:
     name: "Gracjan Lukaszewicz - Developer"
