--- a/cards/src/main/resources/application_qa.yml
+++ b/cards/src/main/resources/application_qa.yml
@@ -6,7 +6,7 @@ spring:
 build:
   version: "2.0"
 
-accounts:
+cards:
   message: "Welcome to Cards Service on QA environment"
   contactDetails:
     name: "Gracjan Lukaszewicz - Developer"
