Config Server - Add Spring Cloud Config Server

--- a/configserver/src/main/resources/config/accounts-qa.yml
+++ b/configserver/src/main/resources/config/accounts-qa.yml
@@ -1,13 +1,8 @@
-spring:
-  config:
-    activate:
-      on-profile: "qa"
-
 build:
   version: "2.0"
 
-loans:
-  message: "Welcome to Loans Service on QA environment"
+accounts:
+  message: "Welcome to Accounts Service on QA environment"
   contactDetails:
     name: "Gracjan Lukaszewicz - Developer"
     email: "gracjan.luk@gmail.com"
