--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8090
 spring:
+  application:
+    name: "loans"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -15,17 +19,4 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-  profiles:
-    active: "qa"
-
-build:
-  version: "3.0"
-
-loans:
-  message: "Welcome to Loans Service"
-  contactDetails:
-    name: "Gracjan Lukaszewicz - Developer"
-    email: "gracjan.luk@gmail.com"
+    import: "optional:configserver:http://localhost:8071/"
