--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -5,9 +5,13 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: "native"
-    cloud:
-      config:
-        server:
-          native:
-            search-locations: "file:./config"
+    active: "git"
+  cloud:
+    config:
+      server:
+        git:
+          uri: "https://github.com/Glukasze/Bank-microservices-configuration.git"
+          default-label: "main"
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
