--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -11,6 +11,8 @@ services:
         limits:
           cpus: '0.3'
           memory: 1024m
+    environment:
+      SPRING_RABBITMQ_HOST: "rabbit"
 
   microservice-configserver-config:
     extends:
