--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -23,3 +23,23 @@ services:
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://configserver:8071/"
       SPRING_PROFILES_ACTIVE: default
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+
+  microservice-db-config:
+    extends:
+      service: network-deploy-service
+    image: mysql
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
+          memory: 512m
+    environment:
+      MYSQL_ROOT_PASSWORD: "root"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      timeout: 10s
+      retries: 10
+      interval: 10s
+      start_period: 10s
