--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -15,6 +15,36 @@ services:
       file: common-config.yml
       service: network-deploy-service
 
+  accountsdb:
+    container_name: "accountsdb"
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: "accountsdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  cardsdb:
+    container_name: "cardsdb"
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_DATABASE: "cardsdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  loansdb:
+    container_name: "loansdb"
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_DATABASE: "loansdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
   configserver:
     image: "rozano/configserver:bank"
     container_name: "configserver-ms"
@@ -40,6 +70,10 @@ services:
       - "8080:8080"
     environment:
       SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb"
+    depends_on:
+        accountsdb:
+            condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-configserver-config
@@ -49,22 +83,30 @@ services:
     container_name: "loans-ms"
     ports:
       - "8090:8090"
+    environment:
+      SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb"
+    depends_on:
+        loansdb:
+            condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-    environment:
-      SPRING_APPLICATION_NAME: "loans"
 
   cards:
     image: "rozano/cards:bank"
     container_name: "cards-ms"
     ports:
       - "9000:9000"
+    environment:
+      SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb"
+    depends_on:
+        cardsdb:
+            condition: service_healthy
     extends:
       file: common-config.yml
       service: microservice-configserver-config
-    environment:
-      SPRING_APPLICATION_NAME: "cards"
 
 networks:
   bank_network:
